# Cypherrock

./: CMakeLists.txt  main.c  readme.md
.VSCodeCounter/2025-04-15_22-55-55/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: mascot.h
include/mascot/: agent.h  machine.h  numerics.h  setup.h  triple.h
include/mta/: agent.h  cot_machine.h
src/mascot/: machine.c  numerics.c  triple.c
src/mta/: agent.c  cot_machine.c
